# min-mem

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  min_dict.json  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: min_mem_session.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dictionary_entry.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
agents/: minimal_agent.py
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: app.js
docs/data/: agent-demo.json  agent-loop-result.json  benchmark.json
experiments/: .gitignore  BASELINE_STUDY.md  STORAGE_PROOF.md  TIERED_VALUE.md  add_curated_allowlist.py  agent_context_demo.py  agent_qa.json  baseline_results.json  benchmark_baselines.py  build_dict_from_ppdb.py  candidates.json  compressors.py  corpus.json  diagnose_regressions.py  dictionary_expansion_report.json  dictionary_learning.py  dictionary_learning_results.json  dictionary_size_sweep.py  dictionary_size_sweep_results.json  dictionary_tiers.py  expand_corpus_verbose.py  expand_dictionary_from_corpora.py  generate_baseline_figure.py  generate_baseline_report.py  generate_corpus.py  generate_figures.py  grow_dict_from_lexpanded_ppdb.py  improve_history.json  improve_loop.py  metrics.py  ppdb_candidates.json  ppdb_growth_report.json  prune_qa_regressions.py  results.json  retrieval_fidelity.json  retrieval_fidelity.py  run_benchmark.py  scaling_curve.py  scaling_curve_figure.py  scaling_curve_results.json  (+5 more)
experiments/storage_proof/: __init__.py  bm25.py  cloud_cost.py  generate_figures.py  org_simulation.py  quality_gate.py  readers.py  runner.py  scoring.py  storage.py  tiny_policy.py
experiments/storage_proof/adapters/: __init__.py  base.py  fixtures.py  locomo.py  membench.py
experiments/storage_proof/fixtures/: locomo_subset.json  membench_subset.json
src/min_mem/: __init__.py  agent.py  bootstrap.py  cli.py  converter.py  dictionary.py
src/min_mem/data/: min_dict.json
src/min_mem/hooks/: __init__.py  session_start.py
tests/: test_bootstrap.py  test_converter.py  test_storage_proof.py
